soroban-sdk/tests/trybuild/contractfile_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: bd54d7acd68edca80653a4cebdf8204fdb678de773911eba73fdd96962efd9b5
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:4:3
  |
4 | );
  |   ^ consider adding a `main` function to `$DIR/tests/trybuild/contractfile_with_sha256_verify_fail.rs`
